docs: improve JDK 26 index and add deep-dive analysis docs
- Update JDK 26 status to GA (released 2025-09-16)
- Fix quick start section to use official release
- Add 6 deep-dive analysis documents:
  - HTTP/3 implementation (JEP 517)
  - G1 GC throughput improvements (JEP 522)
  - Structured Concurrency (JEP 525)
  - Primitive Pattern Matching (JEP 530)
  - AOT compilation improvements (JEP 514/515/516)
  - VectorAPI improvements

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>